version/0.3/_sources/user_guide/troubleshooting.rst.txt
.. _troubleshooting:

Troubleshoot issues
#####################

Learn how to resolve common errors or issues you may encounter when using the Ansys App Portal and Light Deployment Templates™ platform.



Platform services or portal is not accessible
==============================================

To resolve this issue:

#. Check network connectivity in WSL by running the following command in the WSL terminal:

   .. tabs::

      .. code-tab:: bash
         :caption: WSL

         ping google.com

   Example of expected response:
    You should see a response similar to the following if network connectivity is available:

    .. image:: /_static/documenting/check-network-wsl.png

   If the network is not available, run the following commands on the host machine and then restart the host:

   .. tabs::

      .. code-tab:: bash
         :caption: PowerShell

         wsl --shutdown
         netsh winsock reset
         netsh int ip reset all
         netsh winhttp reset proxy
         ipconfig /flushdns

   .. only:: internal

      .. admonition:: For Ansys Internal testing:
         :class: attention

         On the Windows host machine, the ``PYANSYS_PRIVATE_PYPI_PAT`` environment variable must be set as described `here <https://dev-docs.solutions.ansys.com/solution_journey/journey_prepare/connect_to_private_pypi.html>`__. Note that this will not be needed for the production version of the platform.

#. Check the ``hosts`` file entries.

   .. note::

     On Windows operating systems, the ``hosts`` file is located at ``C:\\Windows\\System32\\drivers\\etc\\hosts``.

   a. Ensure that the ``hosts`` file contains the correct mapping of the WSL Native IP address (``WSL_MACHINE_IP`` in the ``.env`` file) with platform services.

      Example of correct mapping:
       .. tabs::

        .. code-tab:: none
          :caption: hosts

          <wsl_native_ip> keycloak.<hostname>.<domain_name>
          <wsl_native_ip> traefik.<hostname>.<domain_name>
          <wsl_native_ip> oauth.<hostname>.<domain_name>
          <wsl_native_ip> portal.<hostname>.<domain_name>

       .. tip::

         To fetch the ``<wsl_native_ip>`` value, run this command in the WSL terminal:

         .. tabs::

           .. code-tab:: bash
             :caption: WSL

              ip addr show eth0

   b. Ensure that there are no duplicate entries with different IP addresses in the ``hosts`` file for the platform services.

      Example of incorrect duplicate entries:
       .. tabs::

        .. code-tab:: none
          :caption: hosts

          <wsl_native_ip> portal.<hostname>.<domain_name>
          <some_other_ip> portal.<hostname>.<domain_name>

User cannot log in to portal or receives an error when accessing portal UI
===========================================================================
In this case, the user can access the Ansys App Portal™, but either cannot log in or receives an error when attempting to access the UI.

To resolve this issue:

#. Check the user registration details in the Keycloak Admin Console.

#. Search for the user with the correct name (as specified in the :ref:`user registration form <register-new-user>`).

#. In the user details, verify that the user is registered with the correct email domain name (as specified in the .env file).

   .. note::
    The email address for the user must have the email domain specified while deploying the platform. Once platform is deployed, in the ``.env`` file, the email domain is specified as ``OP_EMAIL_DOMAIN``.

   Example of invalid email domain:
    In this example, the user **test1** is registered with a domain of `@test.com`. This is invalid because the platform was launched with a domain of `@example.com`.

    .. image:: /_static/documenting/invalid-user-list.png
     :align: center

For more information, see :ref:`keycloak`.


Error occurs while starting platform services
==============================================
To resolve this issue:

#. Check WSL network connectivity.

   .. tabs::

     .. code-tab:: bash
       :caption: WSL

       ping -c 4 google.com

#. If WSL network connectivity is not available, run these commands on the host machine and then restart the host:

   .. tabs::

     .. code-tab::
       :caption: PowerShell

       netsh winsock reset
       netsh int ip reset all
       netsh winhttp reset proxy
       ipconfig /flushdns


Projects of an app deployed on the portal are not accessible
=============================================================
To resolve this issue:

#. Check for the app service entry in the ``hosts`` file of the host machine.

   .. tip::

     On Windows operating systems, the ``hosts`` file is located at ``C:\\Windows\\System32\\drivers\\etc\\hosts``.


#. Ensure that the ``hosts`` file contains the correct mapping of the WSL native IP address with the app service.

   Example of correct mapping:
    .. code-block:: none
      :caption: hosts

       <wsl_native_ip> solutions.<hostname>.<domain_name>

    .. tip::

      To fetch the ``<wsl_native_ip>`` value, run this command in the WSL terminal:

      .. tabs::

        .. code-tab:: bash
          :caption: WSL

          ip addr show eth0

#. Ensure that there are no duplicate entries with different IP addresses in the ``hosts`` file for the app service.

   Example of incorrect duplicate entries:
    .. code-block:: none
      :caption: hosts

      <wsl_native_ip> solutions.<hostname>.<domain_name>
      <some_other_ip> solutions.<hostname>.<domain_name>


Cannot start optiSLang
======================
When starting optiSlang, the following error message is shown:

``Cannot start optiSLang 242. Please contact your IT admin to make sure that optiSLang is reachable and try again.``

The error is likely caused by the host machine being unable to reach the WSL Linux distribution files system.

One way to verify this is to open the WSL file system from Windows Explorer. If you get an error like the one shown here, it confirms that the host machine is not able to reach the WSL file system.

.. image:: /_static/documenting/error_accessing_linux_file_system.png
  :width: 75%

To resolve this issue:

#. Restart WSL by running this script:

   .. tabs::

      .. code-tab:: bash
         :caption: PowerShell

            wsl --shutdown
            wsl

#. Restart the platform as described in :ref:`start-platform`.


Connection to the site is not secure
=====================================
When accessing the platform services, you receive a warning message that the connection to the site is not secure.

To resolve this issue, click :guilabel:`Continue to site`.

.. image:: /_static/documenting/continue-site.png
    :width: 50%

Cannot connect to the Product Instance Manager. Please contact your IT admin to make sure that this component is reachable
===========================================================================================================================

When you execute the optiSLang workflow, the following error message is shown:

Cannot connect to the Product Instance Manager
 .. image:: /_static/documenting/pim_connection_error.png
   :width: 30%

To resolve this issue:

#. In the root directory of the platform, run the following command to activate the virtual environment:

   .. tabs::

      .. code-tab:: bash
         :caption: PowerShell

         .\.venv\Scripts\activate


#. Stop only the product instance manager by running the following command:

   .. tabs::

      .. code-tab:: bash
         :caption: PowerShell

         python .\src\ansys\saf\one_node\main.py -s pim -a stop

#. Start only the product instance manager by running the following command:

   .. tabs::

      .. code-tab:: bash
         :caption: PowerShell

         python .\src\ansys\saf\one_node\main.py -s pim

   .. note::

      To start the product instance manager, accept the license agreement by typing ``y``. 


Cannot execute the ``Deploy-Platform.ps1`` script
=================================================

When executing the ``Deploy-Platform.ps1`` script, you get the following error messages:

Script is not digitally signed:
 .. image:: /_static/documenting/signed_error.png
    :align: center

To resolve this issue:

#. Locate ``Ansys_App_Portal_and_Light_Deployment_Templates.zip``

#. Right-click the zip file and select **Properties**.

#. Unblock the file, click :guilabel:`Apply` and then click :guilabel:`OK`.

   .. image:: /_static/documenting/unblock.png
      :align: center

#. Unzip the ``Ansys_App_Portal_and_Light_Deployment_Templates.zip``.

#. Continue the steps as  defined in :ref:`Deploy and start the platform <deploy>`.

Corrupt virtual environment
---------------------------

If you receive the following messages, it means that your virtual environment is corrupt.

Access is denied to the virtual environment activation script:
 .. image:: /_static/documenting/access-denied-to-venv-activation-script.png
   :align: center


Access is denied to the virtual environment files:
 .. image:: /_static/documenting/access-denied-to-venv-files.png
   :align: center

To resolve these issues:

#. Close all running terminals where the platform script was launched.

#. Navigate to the root directory of the platform and manually delete the ``.venv`` directory.

#. Continue the steps described in :ref:`deploy`.


Cannot execute the ``Start-Platform.ps1`` script after operating system is restarted
====================================================================================

If you receive the following error message when executing the ``Start-Platform.ps1`` script after restarting the operating system:

**<port> is in use, please release it and try starting the platform again.**

.. image:: /_static/documenting/os_restart_port_busy.png
   :align: center

To resolve this issue:

#. Identify the process that is using the port by running the following command in PowerShell:

   .. tabs::

      .. code-tab:: bash
         :caption: PowerShell

         netstat -ano | findstr :<port>

#. Note the PID of the process that is using the port.
#. Terminate the process by running the following command in PowerShell:

   .. tabs::

      .. code-tab:: bash
         :caption: PowerShell

         taskkill /pid <PID> /F

#. Execute the ``Start-Platform.ps1`` script again.